[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "pinger-bot"
description = "Simple discord bot for tracking your MineCraft servers."
version = "0.4.0.dev"
license = "AGPL3"
authors = ["Perchun Pak <perchunpak@gmail.com>"]
readme = "README.md"
repository = "https://github.com/PerchunPak/pinger-bot"


[tool.poetry.dependencies]
python = "^3.8,<3.11"

# Our dependecies
hikari = "~2.0.0-dev"
hikari-lightbulb = "~2.2"
APScheduler = "~3.9"

mcstatus = "~10.0"
SQLAlchemy = {version = "~1.4", extras = ["asyncio"]}
alembic = "~1.8"
dnspython = "~2.2"
omegaconf = "~2.2"
matplotlib = "~3.6"
aiohttp = "~3.8"

# caching utils
cachetools = "~5.2"
asyncache = "0.1.1"

Babel = "~2.11"

structlog = "22.1.0"
### For colors in structlog ###
### Only needed for Windows ###
colorama = { version = "*", markers="platform_system == 'Windows'" }
# Speedup for async, only for unix-like systems
uvloop = { version = "*", markers="os_name != 'nt'" }

# SQLAlchemy
aiomysql  = { version = "*", optional = true }
aiosqlite = { version = "*", optional = true }
asyncpg   = { version = "*", optional = true }


[tool.poetry.group.make.dependencies]
black = "~22"
isort = "~5.10"
pycln = "~2.1"
doc8 = "~1.0"
mypy = "*"  # dependabot can't update non semver dependencies with our config, see e9376da in fire-square-style
flake8 = "~5"
flake8-docstrings = "~1"
pydocstyle = ">=4.0.0"
safety = "~2.3"

pre-commit = "~2.20"

# stubs
SQLAlchemy = {version = "*", extras = ["mypy"]}


[tool.poetry.group.tests.dependencies]
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-mock = "~3.10"
pytest-asyncio = "~0.19"
pytest-testmon = "~1.4"
pytest-randomly = "~3.12"

Faker = "~15.1"
factory-boy = "~3.2"
freezegun = "~1.2"


[tool.poetry.group.docs.dependencies]
sphinx = "~5.3"
sphinx-autodoc-typehints = "~1.19"
sphinx-autoapi = "~2.0"
sphinx-intl = "~2.0"
furo = "*"
m2r2 = "~0.3"
tomli = { version = "~2.0", markers = "python_version < '3.11'" }
packaging = "21.3"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
GitPython = "~3.1"


[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"


[tool.poetry.extras]
mysql = ["aiomysql"]
sqlite = ["aiosqlite"]
postgresql = ["asyncpg"]


[tool.black]
line-length = 120
target-version = ['py310']
