[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "pinger-bot"
description = "Simple discord bot for tracking your Minecraft servers."
version = "0.4.0.dev"
license = "AGPL3"
authors = ["Perchun Pak <perchunpak@gmail.com>"]
readme = "README.md"
repository = "https://github.com/PerchunPak/pinger-bot"


[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

# Our dependecies
hikari = "~2.0.0-dev"
hikari-lightbulb = "~2.3"
APScheduler = "~3.10"

mcstatus = "~10.0"
SQLAlchemy = {version = "~1.4", extras = ["asyncio"]}
alembic = "~1.10"
dnspython = "~2.2"
omegaconf = "~2.3"
matplotlib = "~3.7"
aiohttp = "~3.8"

# caching utils
cachetools = "~5.3"
asyncache = "~0.3"

Babel = "~2.12"

structlog = "22.3.0"
### For colors in structlog ###
### Only needed for Windows ###
colorama = { version = "*", markers="platform_system == 'Windows'" }
# Speedup for async, only for unix-like systems
uvloop = { version = "*", markers="os_name != 'nt'" }

# SQLAlchemy
aiomysql  = { version = "*", optional = true }
aiosqlite = { version = "*", optional = true }
asyncpg   = { version = "*", optional = true }


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.1"
doc8 = "~1.1"
mypy = "~1.0"
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
cruft = "~2.12"
lice = "~0.6"  # for generating template

pre-commit = "~3.1"

# stubs
SQLAlchemy = {version = "*", extras = ["mypy"]}


[tool.poetry.group.tests.dependencies]
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-mock = "~3.10"
pytest-asyncio = "~0.20"
pytest-testmon = "~1.4"
pytest-randomly = "~3.12"

Faker = "~17.6"
factory-boy = "~3.2"
freezegun = "~1.2"


[tool.poetry.group.docs.dependencies]
sphinx = "~6.1"
sphinx-autodoc-typehints = "~1.22"
sphinx-autoapi = "~2.0"
sphinx-intl = "~2.1"
furo = "*"
m2r2 = "~0.3"
tomli = { version = "~2.0", markers = "python_version < '3.11'" }
packaging = "23.0"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.28"
GitPython = "~3.1"


[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"


[tool.poetry.extras]
mysql = ["aiomysql"]
sqlite = ["aiosqlite"]
postgresql = ["asyncpg"]


[tool.black]
line-length = 120
target-version = ['py38']
