[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "pinger-bot"
description = "Simple discord bot for tracking your Minecraft servers."
version = "0.4.0.dev"
license = "AGPL3"
authors = ["Perchun Pak <perchunpak@gmail.com>"]
readme = "README.md"
repository = "https://github.com/PerchunPak/pinger-bot"


[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

# Our dependecies
hikari = "~2.0.0-dev"
hikari-lightbulb = "~2.3"
APScheduler = "~3.10"

mcstatus = "11.0.0a1"
SQLAlchemy = {version = "~1.4", extras = ["asyncio"]}
alembic = "~1.11"
dnspython = "~2.3"
omegaconf = "~2.3"
matplotlib = "~3.7"
aiohttp = "~3.8"
honeybadger = "~0.17"

# caching utils
cachetools = "~5.3"
asyncache = "~0.3"

Babel = "~2.12"

structlog = "22.1.0"
### For colors in structlog ###
### Only needed for Windows ###
colorama = { version = "*", markers="platform_system == 'Windows'" }
# Speedup for async, only for unix-like systems
uvloop = { version = "*", markers="os_name != 'nt'" }

# SQLAlchemy
aiomysql  = { version = "*", optional = true }
aiosqlite = { version = "*", optional = true }
asyncpg   = { version = "*", optional = true }


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.2"
doc8 = "~1.1"
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
cruft = "~2.15"
lice = "~0.6"  # for generating template

pre-commit = "~3.3"


[tool.poetry.group.tests.dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
pytest-mock = "~3.11"
pytest-asyncio = "~0.21"
pytest-testmon = "~2.0"
pytest-randomly = "~3.13"

Faker = "~19.3"
optional-faker = "~2.0"
factory-boy = "~3.3"
freezegun = "~1.2"


[tool.poetry.group.typing.dependencies]
mypy = "~1.4"

types-cachetools = "*"
types-docutils = "*"
types-mock = "*"
types-python-dateutil = "*"
types-pytz = "*"
types-pyyaml = "*"
types-requests = "*"
types-setuptools = "*"
types-urllib3 = "*"
SQLAlchemy = {version = "*", extras = ["mypy"]}


[tool.poetry.group.docs.dependencies]
sphinx = "~7.1"
sphinx-autodoc-typehints = "~1.24"
sphinx-autoapi = "~2.1"
sphinx-intl = "~2.1"
furo = "*"
m2r2 = "~0.3"
tomli = { version = "~2.0", markers = "python_version < '3.11'" }
packaging = "23.1"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.31"
GitPython = "~3.1"


[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
dumb-init = "~1.2"


[tool.poetry.extras]
mysql = ["aiomysql"]
sqlite = ["aiosqlite"]
postgresql = ["asyncpg"]


[tool.black]
line-length = 120
target-version = ['py38']
